Fix whitespace in secrets

--- a/src/popup/popup.less
+++ b/src/popup/popup.less
@@ -117,6 +117,9 @@ body {
             border-radius: 2px;
             height: 36px;
             padding: 4px;
+            .char {
+                white-space: pre;
+            }
             & > .label {
                 border-radius: 2px 0 0 2px;
                 display: flex;
